--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <img src="images.png" alt="logo Eclothing online">
-        <ul>
-            <li>Escola</li>
-            <li>Estudante</li>
+    <header class="cabecalho">
+        <img class="cabecalho-imagem" src="images.png" alt="logo Eclothing online">
+        <ul class="cabecalho-lista">
+            <li class="cabecalho-lista-item">Escola</li>
+            <li class="cabecalho-lista-item">Estudante</li>
         </ul>
     </header>
 </body>
