--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
             <li class="cabecalho-lista-item">Estudante</li>
         </ul>
     </header>
-    <section class="escola">
-        <div class="escola-div-conteudo">
-            <h2 class="escola-titulo">Sobre a Escola</h2>
-            <p class="escola-texto-um">A Escola Alura foi fundada em 2010 e tem como objetivo ensinar Pensamento Computacional, através do ensino de  Programação.</p>
-            <p class="escola-texto-dois">A turma mais estudiosa e famosa é a Segunda Série A. Nós somos super unidos e a turma favorita por todos os professores e professoras que nos ajudam!</p>
+    <section class="loja">
+        <div class="loja-div-conteudo">
+            <h2 class="loja-titulo">Sobre a loja</h2>
+            <p class="loja-texto-um">A Eclothing Online foi fundada em 2024 e tem como objetivo vender produtos de maneira economica</p>
+            <img class="loja-imagem" src="newsstand-amico.png" alt="ilustraçao da loja">
         </div>
     </section>    
 </body>
