--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Site</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Danfo&family=Oswald:wght@200..700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="cabecalho">
@@ -21,6 +24,9 @@
             <p class="loja-texto-um">A Eclothing Online foi fundada em 2024 e tem como objetivo vender produtos de maneira economica</p>
         </div>
         <img class="loja-imagem" src="newsstand-amico.png" alt="ilustraçao da loja">
-    </section>    
+    </section>
+    <section class="estudante">
+        <h2> class="estudante-titulo">Quem são nossos estudantes</h2>
+    </section>  
 </body>
 </html>
