--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
         <img class="loja-imagem" src="newsstand-amico.png" alt="ilustraçao da loja">
     </section>
     <section class="estudante">
-        <h2> class="estudante-titulo">Quem são nossos estudantes</h2>
+        <h2 class="estudante-titulo">Quem são nossos estudantes</h2>
+        <img class="pessoa" src="pessoa1.jpg" alt=".">
     </section>  
 </body>
 </html>
