--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <header class="cabecalho">
         <img class="cabecalho-imagem" src="images.png" alt="logo Eclothing online">
         <ul class="cabecalho-lista">
-            <li class="cabecalho-lista-item">Escola</li>
-            <li class="cabecalho-lista-item">Estudante</li>
+            <li class="cabecalho-lista-item"><a href="#escola">Escola</a></li>
+            <li class="cabecalho-lista-item"><a href="#estudante">Estudante</a></li>
         </ul>
     </header>
     <section class="loja">
